--- a/project1.html
+++ b/project1.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <title>Simplie Hair | Lisa Voronov</title>
     <style>
-            /* Подключаем ваш шрифт */
+        /* Подключение нового шрифта */
         @font-face {
-            font-family: 'Notbad-sans-Regular';
+            font-family: 'Notbad Sans';
             src: url('Notbad-sans-Regular.woff2') format('woff2');
             font-weight: normal;
             font-style: normal;
-            line-height: 30px;
         }
+
         body { 
             margin: 0; 
             display: flex; 
-            background: #ffffff; /* Белый фон */
-            font-family: sans-serif; /* Позже можно заменить на PP Neue Montreal */
+            background: #ffffff; 
+            font-family: 'Notbad Sans', sans-serif; 
             color: #0D0D0D;
+            -webkit-font-smoothing: antialiased; /* Улучшение отрисовки шрифта */
         }
 
         /* Левая часть: фиксированная */
@@ -32,31 +33,22 @@
             justify-content: space-between;
             padding: 60px;
             box-sizing: border-box;
+            background: #ffffff;
+            z-index: 10;
         }
 
         .description {
             font-size: 18px;
-            line-height: 1.6;
+            /* Межстрочный интервал 30 пикселей */
+            line-height: 30px; 
             max-width: 500px;
+            margin-top: 40px;
         }
 
-        .contacts {
-            font-size: 16px;
-        }
-
-        .contacts a {
-            color: #0D0D0D;
-            text-decoration: none;
-            border-bottom: 1px solid #0D0D0D;
-        }
-
-        /* Кнопка назад */
         .back-link {
             text-decoration: none;
             color: #0D0D0D;
             font-size: 14px;
-            margin-bottom: 20px;
-            display: block;
             text-transform: uppercase;
             letter-spacing: 0.1em;
         }
@@ -64,14 +56,49 @@
         /* Правая часть: скроллится */
         .content-side {
             width: 50%;
-            margin-left: 50%; /* Освобождаем место под левую фиксированную часть */
-            min-height: 100vh;
+            margin-left: 50%; 
+            display: flex;
+            flex-direction: column;
         }
 
         .content-side img {
             width: 100%;
             display: block;
-            margin-bottom: 0; /* Изображения идут встык */
+        }
+
+        /* Футер */
+        footer {
+            padding: 100px 60px 60px 60px; /* Увеличил отступ сверху */
+            background: #ffffff;
+        }
+
+        .nav-arrows {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 120px;
+            font-size: 18px;
+        }
+
+        .nav-arrows a {
+            text-decoration: none;
+            color: #0D0D0D;
+            transition: opacity 0.3s;
+        }
+
+        .nav-arrows a:hover {
+            opacity: 0.5;
+        }
+
+        .footer-bottom {
+            display: flex;
+            justify-content: space-between;
+            font-size: 14px;
+            align-items: center;
+        }
+
+        .footer-bottom a {
+            color: #0D0D0D;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -81,17 +108,14 @@
         <div>
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
-                SIMPLIE HAIR is a brand specializing in hair extensions and professional training for stylists. 
+                SIMPLIE HAIR
+                is a brand specializing in hair extensions and professional training for stylists. 
                 As part of our collaboration, I was responsible for all of the brand's visual and print content: 
                 developing multi-page workbooks and B2B brochures, designing packaging, organizing and producing 
                 product and model photo shoots, and preparing materials for print and digital use. 
                 My work included concept development, layout, visual storytelling design, pre-press preparation, 
                 production control, and post-production of images for the website, e-commerce, and social media.
             </div>
-        </div>
-
-        <div class="contacts">
-            email: <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
         </div>
     </div>
 
@@ -101,6 +125,18 @@
         <img src="work19.png">
         <img src="work20.png">
         <img src="work21.png">
+
+        <footer>
+            <div class="nav-arrows">
+                <a href="project16.html">‹ Précédent</a>
+                <a href="project2.html">Suivant ›</a>
+            </div>
+
+            <div class="footer-bottom">
+                <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
+                <div class="copyright">© 2026 Lisa Voronov</div>
+            </div>
+        </footer>
     </div>
 
 </body>
