--- a/project2.html
+++ b/project2.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Simplie Hair | Lisa Voronov</title>
+    <title>Iles Formula | Lisa Voronov</title>
     <style>
         /* Подключение обычного шрифта */
         @font-face {
@@ -119,12 +119,12 @@
         <div>
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
-                <span class="brand-name">SIMPLIE HAIR</span> is a brand specializing in hair extensions and professional training for stylists. 
-                As part of our collaboration, I was responsible for all of the brand's visual and print content: 
-                developing multi-page workbooks and B2B brochures, designing packaging, organizing and producing 
-                product and model photo shoots, and preparing materials for print and digital use. 
-                My work included concept development, layout, visual storytelling design, pre-press preparation, 
-                production control, and post-production of images for the website, e-commerce, and social media.
+                <span class="brand-name">Iles Formula</span> is a luxury professional hair care brand founded by stylist Wendy Iles. 
+                As part of our collaboration, I developed print and digital materials for the brand: catalog design, postcards, 
+                and promotional materials, as well as online banners and visuals for mailings and e-commerce platforms. 
+                My work included concept and visual storytelling, layout and typography, image retouching, 
+                pre-press preparation, print coordination, and approval management to ensure a consistent premium brand image
+                across all communication channels.
             </div>
         </div>
 
@@ -142,11 +142,10 @@
     </div>
 
     <div class="content-side">
-        <img src="work17.png">
-        <img src="work18.png">
-        <img src="work19.png">
-        <img src="work20.png">
-        <img src="work21.png">
+        <img src="work22.png">
+        <img src="work23.png">
+        <img src="work24.png">
+        <img src="work25.png">
     </div>
 
 </body>
