--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div id="left" class="column">
         <div class="item"><img src="work1.png"></div>
         <div class="item"><a href="project1.html"><img src="work3.png"></a></div>
-        <div class="item"><img src="work5.png"></div>
+        <div class="item"><a href="project2.html"><img src="work5.png"></a></div>
         <div class="item"><img src="work7.png"></div>
         <div class="item"><img src="work9.png"></div>
         <div class="item"><img src="work11.png"></div>
@@ -84,7 +84,7 @@
         <div class="item"><img src="work12.png"></div>
         <div class="item"><img src="work10.png"></div>
         <div class="item"><img src="work8.png"></div>
-        <div class="item"><img src="work6.png"></div>
+        <div class="item"><a href="project2.html"><img src="work6.png"></a></div>
         <div class="item"><a href="project1.html"><img src="work4.png"></a></div>
         <div class="item"><img src="work2.png"></div>
     </div>
