--- a/index.html
+++ b/index.html
@@ -1,115 +1,119 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Portfolio | Lisa Voronov</title>
-    <style>
-        /* Подключаем ваш шрифт */
-        @font-face {
-            font-family: 'PP Neue Montreal';
-            src: url('PPNeueMontreal-Regular.woff2') format('woff2');
-            font-weight: normal;
-            font-style: normal;
-        }
+    <meta charset="UTF-8">
+    <title>Portfolio | Lisa Voronov</title>
+    <style>
+        @font-face {
+            font-family: 'PP Neue Montreal';
+            src: url('PPNeueMontreal-Regular.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+        }
 
-        body { 
-            margin: 0; 
-            display: flex; 
-            height: 100vh; 
-            overflow: hidden; 
-            background: #0D0D0D; 
-            font-family: 'PP Neue Montreal', sans-serif; 
-        }
+        body { 
+            margin: 0; 
+            display: flex; 
+            height: 100vh; 
+            overflow: hidden; 
+            background: #0D0D0D; 
+            font-family: 'PP Neue Montreal', sans-serif; 
+        }
 
-        .column { 
-            width: 50%; 
-            height: 100vh; 
-            overflow-y: scroll; 
-            box-sizing: border-box;
-            scroll-snap-type: y mandatory; 
-        }
+        .column { 
+            width: 50%; 
+            height: 100vh; 
+            overflow-y: auto; /* Возвращаем стандартный режим для плавности */
+            box-sizing: border-box;
+            /* Изменяем на proximity для более мягкого поведения */
+            scroll-snap-type: y proximity; 
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+        }
 
-        /* Убрали pointer-events: none, чтобы ссылка стала кликабельной */
-        #right {
-            scroll-snap-type: none; 
-        }
+        .column::-webkit-scrollbar { display: none; } 
 
-        .column::-webkit-scrollbar { width: 0; } 
+        .item { 
+            width: 100%; 
+            height: 100vh; 
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            scroll-snap-align: start;
+        }
 
-        .item { 
-            width: 100%; 
-            height: 100vh; 
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            scroll-snap-align: start;
-        }
+        .item img { 
+            width: 100%; 
+            height: 100vh; 
+            object-fit: cover; 
+            display: block; 
+            transition: opacity 0.3s ease; 
+        }
 
-        .item img { 
-            width: 100%; 
-            height: 100vh; 
-            object-fit: cover; 
-            display: block; 
-            transition: opacity 0.3s; 
-        }
+        .item a {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
 
-        /* Добавим эффект при наведении на ссылки, чтобы было понятно, что на них можно нажать */
-        .item a {
-            display: block;
-            width: 100%;
-            height: 100%;
-        }
-
-        .item a:hover img {
-            opacity: 0.7;
-        }
-    </style>
+        .item a:hover img { opacity: 0.7; }
+    </style>
 </head>
 <body>
 
-    <div id="left" class="column">
-        <div class="item"><img src="work1.png"></div>
-        <div class="item"><a href="project1.html"><img src="work3.png"></a></div>
-        <div class="item"><a href="project2.html"><img src="work5.png"></a></div>
-        <div class="item"><img src="work7.png"></div>
-        <div class="item"><img src="work9.png"></div>
-        <div class="item"><img src="work11.png"></div>
-        <div class="item"><img src="work13.png"></div>
-        <div class="item"><img src="work15.png"></div>
-    </div>
+    <div id="left" class="column">
+        <div class="item"><img src="work1.png"></div>
+        <div class="item"><a href="project1.html"><img src="work3.png"></a></div>
+        <div class="item"><a href="project2.html"><img src="work5.png"></a></div>
+        <div class="item"><a href="project2.html"><img src="work7.png"></a></div>
+        <div class="item"><img src="work9.png"></div>
+        <div class="item"><img src="work11.png"></div>
+        <div class="item"><img src="work13.png"></div>
+        <div class="item"><img src="work15.png"></div>
+    </div>
 
-    <div id="right" class="column">
-        <div class="item"><img src="work16.png"></div>
-        <div class="item"><img src="work14.png"></div>
-        <div class="item"><img src="work12.png"></div>
-        <div class="item"><img src="work10.png"></div>
-        <div class="item"><img src="work8.png"></div>
-        <div class="item"><a href="project2.html"><img src="work6.png"></a></div>
-        <div class="item"><a href="project1.html"><img src="work4.png"></a></div>
-        <div class="item"><img src="work2.png"></div>
-    </div>
+    <div id="right" class="column">
+        <div class="item"><img src="work16.png"></div>
+        <div class="item"><img src="work14.png"></div>
+        <div class="item"><img src="work12.png"></div>
+        <div class="item"><img src="work10.png"></div>
+        <div class="item"><a href="project2.html"><img src="work8.png"></a></div>
+        <div class="item"><a href="project2.html"><img src="work6.png"></a></div>
+        <div class="item"><a href="project1.html"><img src="work4.png"></a></div>
+        <div class="item"><img src="work2.png"></div>
+    </div>
 
-    <script>
-        const left = document.getElementById('left');
-        const right = document.getElementById('right');
+    <script>
+        const left = document.getElementById('left');
+        const right = document.getElementById('right');
 
-        // Чтобы правая колонка не перехватывала скролл, но по ней можно было кликать
-        // Мы просто синхронизируем её постоянно с левой
-        function sync() {
-            const maxScrollLeft = left.scrollHeight - left.clientHeight;
-            const maxScrollRight = right.scrollHeight - right.clientHeight;
-            const scrollPercentage = left.scrollTop / maxScrollLeft;
-            
-            right.scrollTop = maxScrollRight - (scrollPercentage * maxScrollRight);
-            requestAnimationFrame(sync);
-        }
+        let activeColumn = null;
 
-        requestAnimationFrame(sync);
+        // Определяем, над какой колонкой находится мышь
+        left.onmouseenter = () => activeColumn = 'left';
+        right.onmouseenter = () => activeColumn = 'right';
 
-        window.onload = () => {
-            const maxScrollRight = right.scrollHeight - right.clientHeight;
-            right.scrollTop = maxScrollRight;
-        };
-    </script>
+        function handleScroll(source, target, isReverse) {
+            if (activeColumn !== source.id) return;
+
+            const maxSource = source.scrollHeight - source.clientHeight;
+            const maxTarget = target.scrollHeight - target.clientHeight;
+            const percentage = source.scrollTop / maxSource;
+
+            if (isReverse) {
+                target.scrollTop = maxTarget - (percentage * maxTarget);
+            } else {
+                target.scrollTop = (1 - percentage) * maxTarget;
+            }
+        }
+
+        left.addEventListener('scroll', () => handleScroll(left, right, true));
+        right.addEventListener('scroll', () => handleScroll(right, left, false));
+
+        window.onload = () => {
+            // Гарантируем, что правая колонка начинается с work2.png (внизу)
+            right.scrollTop = right.scrollHeight;
+        };
+    </script>
 </body>
 </html>
