--- a/project3.html
+++ b/project3.html
@@ -165,8 +165,8 @@
             dynamicImg.src = images[currentIndex];
         }
 
-        // Вернул 1.5 сек (1500мс) как вы просили ранее для этой анимации
-        setInterval(changeImage, 1500);
+        // Вернул 2 сек (2с) как вы просили ранее для этой анимации
+        setInterval(changeImage, 2000);
     </script>
 
 </body>
