--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="item"><a href="project1.html"><img src="work3.png"></a></div>
         <div class="item"><a href="project2.html"><img src="work5.png"></a></div>
         <div class="item"><a href="project3.html"><img src="work7.png"></a></div>
-        <div class="item"><img src="work9.png"></div>
+        <div class="item"><a href="project4.html"><img src="work9.png"></a></div>
         <div class="item"><img src="work11.png"></div>
         <div class="item"><img src="work13.png"></div>
         <div class="item"><img src="work15.png"></div>
@@ -81,7 +81,7 @@
         <div class="item"><img src="work16.png"></div>
         <div class="item"><img src="work14.png"></div>
         <div class="item"><img src="work12.png"></div>
-        <div class="item"><img src="work10.png"></div>
+        <div class="item"><a href="project4.html"><img src="work10.png"></a></div>
         <div class="item"><a href="project3.html"><img src="work8.png"></a></div>
         <div class="item"><a href="project2.html"><img src="work6.png"></a></div>
         <div class="item"><a href="project1.html"><img src="work4.png"></a></div>
