--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
         <div class="item"><a href="project2.html"><img src="work5.png"></a></div>
         <div class="item"><a href="project3.html"><img src="work7.png"></a></div>
         <div class="item"><a href="project4.html"><img src="work9.png"></a></div>
-        <div class="item"><img src="work11.png"></div>
-        <div class="item"><img src="work13.png"></div>
-        <div class="item"><img src="work15.png"></div>
+        <div class="item"><a href="project5.html"><img src="work11.png"></a></div>
+        <div class="item"><a href="project6.html"><img src="work13.png"></a></div>
+        <div class="item"><a href="project7.html"><img src="work15.png"></a></div>
     </div>
 
     <div id="right" class="column">
-        <div class="item"><img src="work16.png"></div>
-        <div class="item"><img src="work14.png"></div>
-        <div class="item"><img src="work12.png"></div>
+        <div class="item"><a href="project7.html"><img src="work16.png"></a></div>
+        <div class="item"><a href="project6.html"><img src="work14.png"></a></div>
+        <div class="item"><a href="project5.html"><img src="work12.png"></a></div>
         <div class="item"><a href="project4.html"><img src="work10.png"></a></div>
         <div class="item"><a href="project3.html"><img src="work8.png"></a></div>
         <div class="item"><a href="project2.html"><img src="work6.png"></a></div>
