--- a/project7.html
+++ b/project7.html
@@ -30,7 +30,7 @@
         }
 
         .info-side {
-            width: 50%;
+            width: 100%;
             height: 100vh;
             position: fixed;
             left: 0;
@@ -99,9 +99,9 @@
 
         /* ПРАВАЯ ЧАСТЬ */
         .right-side {
-            width: 50%;
-            height: 50vh;
-            margin-left: 50%;
+            width: 70%;
+            height: 100vh;
+            margin-left: 70%;
             display: flex;
             align-items: center; /* Центрирование по вертикали */
             justify-content: center; /* Центрирование по горизонтали */
@@ -123,7 +123,9 @@
         <div>
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
-                <span class="brand-name">Lisa Voronov</span> is me.
+                <span class="brand-name">Lisa Voronov</span> is me. I am a graphic designer with many years of experience in marketing, sales, and art. 
+                I work with brands and their intermediaries, specializing in graphic design, but I also create photo and video visuals. 
+                I am fluent in Adobe, combining it with Kai, Figma, and other tools. Write to me, I look forward to working with you! 
             </div>
         </div>
 
