--- a/project7.html
+++ b/project7.html
@@ -123,9 +123,13 @@
         <div>
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
-                <span class="brand-name">Lisa Voronov</span> is me. I am a graphic designer with many years of experience in marketing, sales, and art. 
-                I work with brands and their intermediaries, specializing in graphic design, but I also create photo and video visuals. 
-                I am fluent in Adobe, combining it with Kai, Figma, and other tools. Write to me, I look forward to working with you! 
+                <span class="brand-name">Lisa Voronov</span> is me. 
+                I am a graphic designer with many years of experience in marketing, sales, and art. 
+                I work with brands and their intermediaries, specializing in graphic design, but 
+                I also create photo and video visuals. 
+                I am fluent in Adobe, combining it with Kai, Figma, and other tools. 
+                Write to me, 
+                I look forward to working with you! 
             </div>
         </div>
 
