--- a/project7.html
+++ b/project7.html
@@ -68,13 +68,14 @@
         .left-footer {
             display: flex;
             flex-direction: column;
-            gap: 30px; 
+            gap: 20px; 
         }
 
         .nav-arrows {
             display: flex;
             justify-content: space-between;
             font-size: 13px;
+            margin-bottom: 30px;
         }
 
         .nav-arrows a {
