--- a/project7.html
+++ b/project7.html
@@ -68,14 +68,14 @@
         .left-footer {
             display: flex;
             flex-direction: column;
-            gap: 20px; 
+            gap: 10px; 
         }
 
         .nav-arrows {
             display: flex;
             justify-content: space-between;
             font-size: 13px;
-            margin-bottom: 30px;
+            margin-bottom: 10px;
         }
 
         .nav-arrows a {
@@ -113,7 +113,9 @@
         #dynamic-work {
             width: 100%;
             height: 100vh;
-            object-fit: cover; /* Чтобы картинка заполняла всю правую часть */
+            object-fit:
+            width: 100%;
+            height: 100vh;
             display: block;
         }
     </style>
