--- a/project7.html
+++ b/project7.html
@@ -25,7 +25,6 @@
             font-family: 'Notbad Sans', sans-serif; 
             color: #0D0D0D;
             -webkit-font-smoothing: antialiased;
-            /* Запрещаем скролл на всей странице */
             overflow: hidden; 
             height: 100vh;
         }
@@ -39,7 +38,8 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            padding: 60px;
+            /* Уменьшен нижний padding, чтобы прижать футер к краю */
+            padding: 60px 60px 30px 60px;
             box-sizing: border-box;
             background: #ffffff;
             z-index: 10;
@@ -69,6 +69,8 @@
             display: flex;
             flex-direction: column;
             gap: 10px; 
+            /* Опускаем блок на 30 пикселей ниже к краю */
+            transform: translateY(30px);
         }
 
         .nav-arrows {
@@ -98,11 +100,10 @@
             text-decoration: none;
         }
 
-        /* ПРАВАЯ ЧАСТЬ: ФИКСИРОВАННАЯ */
         .right-side {
             width: 50%;
             height: 100vh;
-            margin-left: 50%; /* Смещаем вправо */
+            margin-left: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -111,11 +112,11 @@
         }
 
         #dynamic-work {
-            width: 100%;
-            height: 100vh;
-            object-fit:
-            width: 100%;
-            height: 100vh;
+            /* Уменьшено в 1.5 раза (100 / 1.5 ≈ 66) */
+            width: 66%;
+            height: 66vh;
+            /* Гарантирует, что фото не обрезается и видно целиком */
+            object-fit: contain;
             display: block;
         }
     </style>
