--- a/project7.html
+++ b/project7.html
@@ -39,7 +39,7 @@
             flex-direction: column;
             justify-content: space-between;
             /* Уменьшен нижний padding, чтобы прижать футер к краю */
-            padding: 60px 60px 30px 60px;
+            padding: 80px 80px 30px 80px;
             box-sizing: border-box;
             background: #ffffff;
             z-index: 10;
@@ -70,7 +70,7 @@
             flex-direction: column;
             gap: 10px; 
             /* Опускаем блок на 30 пикселей ниже к краю */
-            transform: translateY(30px);
+            transform: translateY(20px);
         }
 
         .nav-arrows {
@@ -113,8 +113,8 @@
 
         #dynamic-work {
             /* Уменьшено в 1.5 раза (100 / 1.5 ≈ 66) */
-            width: 66%;
-            height: 66vh;
+            width: 80%;
+            height: 80vh;
             /* Гарантирует, что фото не обрезается и видно целиком */
             object-fit: contain;
             display: block;
@@ -127,7 +127,12 @@
         <div>
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
-                <span class="brand-name">Lisa Voronov</span> is me. I am a graphic designer with many years of experience in marketing, sales, and art. I work with brands and their intermediaries, specializing in graphic design, but I also create photo and video visuals. I am fluent in Adobe, combining it with Kai, Figma, and other tools. Write to me, I look forward to working with you!
+                <span class="brand-name">Lisa Voronov</span> 
+                is me. 
+                I am a graphic designer with many years of experience in marketing, sales, and art. 
+                I work with brands and their intermediaries, specializing in graphic design, 
+                but I also create photo and video visuals. I am fluent in Adobe, combining it with KI, 
+                Figma, and other tools. Write to me, I look forward to working with you!
             </div>
         </div>
 
