--- a/project7.html
+++ b/project7.html
@@ -129,13 +129,26 @@
         <div>
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
+                .description {
+    font-size: 15px; 
+    line-height: 18px; 
+    /* Ширина подобрана под ваш объем текста, чтобы вышло 5 строк */
+    max-width: 440px; 
+    margin-top: 40px;
+    /* Выравнивание по обеим сторонам (как в книгах/журналах) */
+    text-align: justify;
+    /* Опционально: автоматический перенос слов, если строки не влезают */
+    hyphens: auto; 
+}
                 <span class="brand-name">Lisa Voronov</span> 
-                is me. 
-                I am a graphic designer with many years of experience in marketing, sales, and art. 
-                I work with brands and their intermediaries, specializing in graphic design, 
-                but I also create photo and video visuals. I am fluent in Adobe, combining it with KI, 
-                Figma, and other tools. Write to me, I look forward to working with you!
-            </div>
+             <div class="description">
+    that's me. I am a graphic designer with extensive experience in digital and print media. 
+    I work with brands and their intermediaries, creating photo and video content, 
+    visual systems, and images that align with each brand's aesthetics. 
+    For me, design is first and foremost about function and emotion, 
+    and only then about pleasing visuals. 
+    If you like my approach, I look forward to working with you!
+</div>
         </div>
 
         <div class="left-footer">
