--- a/project7.html
+++ b/project7.html
@@ -135,7 +135,7 @@
     visual systems, and images that align with each brand's aesthetics. 
     For me, design is first and foremost about function and emotion, 
     and only then about pleasing visuals. 
-    <br><br>If you like my approach, I look forward to working with you!
+    <br>If you like my approach, I look forward to working with you!
 </div>
         </div>
 
