--- a/project4.html
+++ b/project4.html
@@ -129,9 +129,11 @@
         <div>
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
-                <span class="brand-name">KAA by Bill Kaulitz</span> is a perfume brand. As part of the collaboration, I served as the brand's photographer, 
+                <span class="brand-name">KAA by Bill Kaulitz</span> is a perfume brand. As part of the collaboration, 
+                <br>I served as the brand's photographer, 
               responsible for the creative concept, styling, shooting, and post-production of visuals for social media. My task was to create 
-              content that reinforces the brand's character and supports its recognizable visual language.
+              content that reinforces the brand's character and supports
+                <br>its recognizable visual language.
 </div>
         </div>
 
